--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "ext-openssl": "*",
         "fig/http-message-util": "^1.1",
         "guzzlehttp/guzzle": "^6.3.1|^7.0",
-        "kreait/clock": "^1.0.1",
+        "lcobucci/clock": "^2.0",
         "lcobucci/jwt": "^3.4.1|^4.0",
         "psr/cache": "^1.0",
         "psr/simple-cache": "^1.0"
