Update PHPStan usage

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
     },
     "require-dev": {
         "firebase/php-jwt": "^5.0",
+        "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan-phpunit": "^0.9.4|^0.12",
         "symfony/cache": "^3.4.26|^4.4|^5.0",
         "symfony/var-dumper": "^3.4|^4.4|^5.0",
