--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,6 +1,8 @@
 parameters:
+	level: max
+
+	paths:
+		- src
+
 	ignoreErrors:
 		- '#Access to an undefined property object#'
-
-includes:
-	- vendor/phpstan/phpstan-phpunit/extension.neon
