--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,6 @@
 /.php_cs export-ignore
 /.travis.yml export-ignore
 /Makefile export-ignore
-/phpstan.neon export-ignore
+/phpstan.neon.dist export-ignore
 /phpunit.xml.dist export-ignore
 /tests export-ignore
