--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -1,5 +1,7 @@
 <?php
 
+declare(strict_types=1);
+
 $finder = PhpCsFixer\Finder::create()
     ->exclude(['build', 'vendor'])
     ->in(__DIR__);
@@ -30,9 +32,9 @@ return PhpCsFixer\Config::create()
             'allow_mixed' => true,
         ],
         'no_useless_else' => true,
-//        'nullable_type_declaration_for_default_null_value' => [
-//            'use_nullable_type_declaration' => false,
-//        ],
+        // 'nullable_type_declaration_for_default_null_value' => [
+        //   'use_nullable_type_declaration' => false,
+        // ],
         'ordered_imports' => true,
         'ordered_interfaces' => true,
         'phpdoc_line_span' => [
