--- a/composer.json
+++ b/composer.json
@@ -16,16 +16,13 @@
         "ext-json": "*",
         "ext-openssl": "*",
         "fig/http-message-util": "^1.1",
-        "guzzlehttp/guzzle": "^6.3.1|^7.0",
+        "guzzlehttp/guzzle": "^7.0",
         "lcobucci/clock": "^2.0",
-        "lcobucci/jwt": "^3.4.1|^4.0",
+        "lcobucci/jwt": "^4.0",
         "psr/cache": "^1.0",
         "psr/simple-cache": "^1.0"
     },
     "suggest": {
-        "firebase/php-jwt": "^5.0 can be used to create and parse tokens",
-        "guzzlehttp/guzzle": "^6.2.1|^7.0 can be used as an HTTP handler",
-        "lcobucci/jwt": "^3.2 can be used to create and parse tokens",
         "psr/cache-implementation": "to cache fetched remote public keys",
         "psr/simple-cache-implementation": "to cache fetched remote public keys"
     },
