--- a/composer.json
+++ b/composer.json
@@ -12,27 +12,26 @@
         }
     ],
     "require": {
-        "php": "^7.2|~8.0.0",
+        "php": "^7.4|~8.0.0",
         "ext-json": "*",
         "ext-openssl": "*",
-        "fig/http-message-util": "^1.1",
-        "guzzlehttp/guzzle": "^7.0",
-        "lcobucci/clock": "^2.0",
-        "lcobucci/jwt": "^4.0",
-        "psr/cache": "^1.0",
-        "psr/simple-cache": "^1.0"
+        "fig/http-message-util": "^1.1.0",
+        "guzzlehttp/guzzle": "^7.2.0",
+        "lcobucci/clock": "^2.0.0",
+        "lcobucci/jwt": "^4.0.0",
+        "psr/cache": "^1.0.1",
+        "psr/simple-cache": "^1.0.1"
     },
     "suggest": {
         "psr/cache-implementation": "to cache fetched remote public keys",
         "psr/simple-cache-implementation": "to cache fetched remote public keys"
     },
     "require-dev": {
-        "firebase/php-jwt": "^5.0",
+        "firebase/php-jwt": "^5.2",
+        "friendsofphp/php-cs-fixer": "^2.17.3",
         "phpstan/extension-installer": "^1.1",
-        "phpstan/phpstan-phpunit": "^0.9.4|^0.12",
-        "symfony/cache": "^3.4.26|^4.4|^5.0",
-        "symfony/var-dumper": "^3.4|^4.4|^5.0",
-        "yoast/phpunit-polyfills": "^0.2.0"
+        "phpstan/phpstan-phpunit": "^0.12.17",
+        "phpunit/phpunit": "^9.5.0"
     },
     "autoload": {
         "psr-4": {
